--- a/landing.html
+++ b/landing.html
@@ -83,18 +83,18 @@
                     </div>
             </div>
                 <div class="card">
-                    <img src="hero-img3.jpg">
+                    <img src="hero-img7.jpg">
                         <div class="card-content">
-                            <h1>card name</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis officiis quibusdam ea iste, magnam repellat, impedit a ipsum non dolores veritatis voluptatibus reprehenderit recusandae sed laboriosam voluptatum eos, ut omnis?</p>
+                            <h1>Responsive Design</h1>
+                            <p>ensuring an optimal viewing experience across all devices, from desktops to smartphones. With flexible layouts and adaptive elements, the site automatically adjusts to different screen sizes, providing a seamless and intuitive user experience.</p>
                         </div>
                 </div>
 
                 <div class="card">
-                    <img src="hero-img4.jpg">
+                    <img src="hero-img8.jpg">
                         <div class="card-content">
-                            <h1>card name</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis officiis quibusdam ea iste, magnam repellat, impedit a ipsum non dolores veritatis voluptatibus reprehenderit recusandae sed laboriosam voluptatum eos, ut omnis?</p>
+                            <h1>Privacy & Security</h1>
+                            <p>We prioritize your privacy and security by implementing robust measures to ensure your data remains safe,With our high security standards, you can trust that your personal data is handled with the utmost care and confidentiality.</p>
                         </div>
                 </div>
             </div>
