--- a/landing.html
+++ b/landing.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HabitSpark</title>
     <link rel="stylesheet" href="landing.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <nav>
@@ -24,7 +25,7 @@
         <div class="container__left">
           <h1>Build Your Good Habits</h1>
           <div class="container__btn">
-            <button class="btn">SING-UP Now</button>
+            <button class="btn" onclick="navigateToSingupPage()">SING-UP Now</button>
             <a href="login.html" id="myLink"></a>
           </div>
         </div>
@@ -99,6 +100,18 @@
                 </div>
             </div>
       </div>
+      <section class="footer">
+        <div class="footer__logo">
+          <p>HabitSpark</p>
+        <div class="social">
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-snapchat"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <br>
+          <h5>HabitSpark@gmail.com</h5>
+        </div>
+      </section>
       <script src="landing.js"></script>
 </body>
 </html>
